data/n8n/overlays/production/n8n-webhooks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-webhook
spec:
  replicas: 3
  selector:
    matchLabels:
      service: n8n-webhook
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: n8n-webhook
    spec:
      restartPolicy: Always
      containers:
        - name: webhook
          image: n8nio/n8n:1.19.4
          args: ["webhook"]
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-webhook
spec:
  type: ClusterIP
  selector:
    service: n8n-webhook
  ports:
    - port: 5678
