data/n8n/overlays/production/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "Server";
      more_set_headers "X-Frame-Options: SAMEORIGIN";
      proxy_set_header Accept-Encoding "";
spec:
  rules:
    - host: n8n.contextsuite.com
      http:
        paths:
          - path: /webhook/
            pathType: Prefix
            backend:
              service:
                name: n8n-webhook
                port:
                  number: 5678
          - path: /webhook-waiting/
            pathType: Prefix
            backend:
              service:
                name: n8n-webhook
                port:
                  number: 5678
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-main
                port:
                  number: 5678
  tls:
    - hosts:
        - n8n.contextsuite.com
      secretName: star-contextsuite-com
